--- a/robo_shop.ansible/ansible.cfg
+++ b/robo_shop.ansible/ansible.cfg
@@ -1,4 +1,5 @@
 # Configures Ansible behavior.
 [defaults]
-inventory=inventory.ini
+inventory=inventory.ini  
+host_key_checking = False
 ansible_user=balaji
