--- a/robo_shop.ansible/setup.yaml
+++ b/robo_shop.ansible/setup.yaml
@@ -1,6 +1,7 @@
 - name: "Installing {{service}}"
-  hosts:  "{{service}}"
-  vars_files: 
+  become: yes
+  hosts: "{{service}}"
+  vars_files:
     - variables.yaml
   roles:
     - "{{service}}"
