--- a/robo_shop.ansible/roles/rabbitmq/tasks/main.yaml
+++ b/robo_shop.ansible/roles/rabbitmq/tasks/main.yaml
@@ -16,4 +16,4 @@
     enabled: yes
 
 - name: Configuring RabbitMQ User
-  ansible.builtin.shell: rabbitmqctl add_user roboshop roboshop123 ; rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
+  ansible.builtin.shell: rabbitmqctl add_user roboshop '{{rabbitmq_password}}' ; rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
