Organised text in files

--- a/robo_shop.ansible/inventory.ini
+++ b/robo_shop.ansible/inventory.ini
@@ -1,4 +1,5 @@
-# if applications are not hosted on same server, Replace "localhost" with server IP address or DNS name.
+# Define the target servers for each service. 
+# Replace "localhost" with the server's IP address or DNS name where each service should be deployed.
 
 [mongodb]
 localhost
