--- a/robo_shop.ansible/roles/common/tasks/service_setup1.yaml
+++ b/robo_shop.ansible/roles/common/tasks/service_setup1.yaml
@@ -7,7 +7,7 @@
     path: "/app/{{service}}"
     state: directory
 
-- name: Downlaoding "{{service}}" service
+- name: Downloading "{{service}}" service
   ansible.builtin.unarchive:
     src: "https://buildbucket5.s3.us-east-1.amazonaws.com/RoboShop/{{service}}.zip"
     dest: "/app/{{service}}"
