Fixed a Code Mistake

--- a/robo_shop.ansible/roles/web/handlers/main.yaml
+++ b/robo_shop.ansible/roles/web/handlers/main.yaml
@@ -1,5 +1,5 @@
 - name: Restarting Nginx
-  ansible.builtin.package:
+  ansible.builtin.service:
     name: nginx
     state: restarted
     enabled: yes
