--- a/robo_shop.docker/web/Dockerfile
+++ b/robo_shop.docker/web/Dockerfile
@@ -16,21 +16,27 @@ RUN rm -rf /usr/share/nginx/html/* && \
     sed -i "s/splash.html/shell.html/g" /usr/share/nginx/html/js/controller.js
 
 # Adds custom Nginx configuration
-RUN echo 'proxy_http_version 1.1;
+RUN cat <<EOF > /etc/nginx/default.d/roboshop.conf
+proxy_http_version 1.1;
+
 location /images/ {
-expires 5s;
-root   /usr/share/nginx/html;
-try_files \$uri /images/placeholder.jpg;
+  expires 5s;
+  root   /usr/share/nginx/html;
+  try_files \$uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://localhost:8082/; }
-location /api/user/ { proxy_pass http://localhost:8081/; }
-location /api/cart/ { proxy_pass http://localhost:8083/; }
-location /api/shipping/ { proxy_pass http://localhost:8084/; }
-location /api/payment/ { proxy_pass http://localhost:8085/; }
+
+location /api/catalogue/ { proxy_pass http://catalogue:8082/; }
+location /api/user/ { proxy_pass http://user:8081/; }
+location /api/cart/ { proxy_pass http://cart:8083/; }
+location /api/shipping/ { proxy_pass http://shipping:8084/; }
+location /api/payment/ { proxy_pass http://payment:8085/; }
+
 location /health {
-stub_status on;
-access_log off;
-}' > /etc/nginx/default.d/roboshop.conf
+  stub_status on;
+  access_log off;
+}
+EOF
+
 
 # Exposes HTTP port
 EXPOSE 80
