--- a/robo_shop.docker/catalogue/dockerfile
+++ b/robo_shop.docker/catalogue/dockerfile
@@ -1,10 +1,16 @@
-FROM node:18
+FROM node:18.19.1-alpine3.19
 
-EXPOSE 8082
+EXPOSE 8080
+
+RUN addgroup -S roboshop_grp && adduser -S roboshop -G roboshop_grp
 
 WORKDIR /app/catalogue
 
 ENV MONGO=true
+
+RUN chown roboshop:roboshop_grp /app/catalogue
+
+USER roboshop
 
 COPY package.json /app/catalogue/
 
