--- a/robo_shop.docker/web/roboshop.conf
+++ b/robo_shop.docker/web/roboshop.conf
@@ -2,16 +2,16 @@ proxy_http_version 1.1;
 location /images/ {
   expires 5s;
   root   /usr/share/nginx/html;
-  try_files \$uri /images/placeholder.jpg;
+  try_files $uri /images/placeholder.jpg;
 }
 
 #####use "localhost" for Services if hosted on same server, if not change "localhost" to respective services' IP address or DNS name.#####
 
- location /api/catalogue/ { proxy_pass http://localhost:8080/; }
- location /api/user/ { proxy_pass http://localhost:8080/; }
- location /api/cart/ { proxy_pass http://localhost:8080/; }
- location /api/shipping/ { proxy_pass http://localhost:8080/; }
- location /api/payment/ { proxy_pass http://localhost:8080/; }
+ location /api/catalogue/ { proxy_pass http://catalogue:8080/; }
+ location /api/user/ { proxy_pass http://user:8080/; }
+ location /api/cart/ { proxy_pass http://cart:8080/; }
+ location /api/shipping/ { proxy_pass http://shipping:8080/; }
+ location /api/payment/ { proxy_pass http://payment:8080/; }
 
 location /health {
   stub_status on;
