--- a/robo_shop.docker/web/Dockerfile
+++ b/robo_shop.docker/web/Dockerfile
@@ -3,17 +3,17 @@ FROM almalinux:8
 
 # Installs nginx
 RUN dnf install -y nginx && \
-  dnf install -y wget unzip
+    dnf install -y wget unzip
 
 # Set working directory
 WORKDIR /usr/share/nginx/html
 
 # Cleans existing content and download RoboShop UI
 RUN rm -rf /usr/share/nginx/html/* && \
-  wget https://buildbucket5.s3.us-east-1.amazonaws.com/RoboShop/web.zip && \
-  unzip -o web.zip && \
-  rm -f web.zip && \
-  sed -i "s/splash.html/shell.html/g" /usr/share/nginx/html/js/controller.js
+    wget https://buildbucket5.s3.us-east-1.amazonaws.com/RoboShop/web.zip && \
+    unzip -o web.zip && \
+    rm -f web.zip && \
+    sed -i "s/splash.html/docker.html/g" /usr/share/nginx/html/js/controller.js
 
 # Adds custom Nginx configuration
 RUN mkdir -p /etc/nginx/default.d/
