Added Provison to skip initial User setup

--- a/robo_shop.jenkins/jenkins/dockerfile
+++ b/robo_shop.jenkins/jenkins/dockerfile
@@ -1,7 +1,11 @@
 FROM jenkins/jenkins:alpine
-ENV JENKINS_USER admin
-ENV JENKINS_PASS pocof123
+
+ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
+
+COPY --chown=jenkins:jenkins config.xml /usr/share/jenkins/ref/config.xml
+
 COPY --chown=jenkins:jenkins plugins.txt /usr/share/jenkins/ref/plugins.txt
+
 RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
 
 
@@ -9,4 +13,3 @@ RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
 
 
 
-# docker run -d -p 8080:8080 -v jenkins_home:/var/jenkins_home jenkins
