Added Provison to skip initial User setup

--- a/robo_shop.jenkins/jenkins/dockerfile
+++ b/robo_shop.jenkins/jenkins/dockerfile
@@ -2,9 +2,9 @@ FROM jenkins/jenkins:alpine
 
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 
-COPY jenkins_home/ /var/jenkins_home/
-
 COPY --chown=jenkins:jenkins plugins.txt /usr/share/jenkins/ref/plugins.txt
+
+COPY user.groovy /usr/share/jenkins/ref/init.groovy.d/user.groovy
 
 RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
 
