Update in Pipeline File

--- a/robo_shop.jenkins/jenkinsfile
+++ b/robo_shop.jenkins/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             steps{
                 script{
                     def changedServices = sh(
-                        script :"git diff --name-only origin/main...HEAD | grep '^roboshop\.jenkins/' | cut -d/ -f2 | sort -u",
+                        script :"git diff --name-only origin/main...HEAD | grep '^roboshop\\.jenkins/' | cut -d/ -f2 | sort -u",
                         returnStdout:  true).trim().split("\n")
                     
                     def knownServices = ['user','cart','catalogue','shipping','payment','web']
