--- a/robo_shop.jenkins/jenkinsfile
+++ b/robo_shop.jenkins/jenkinsfile
@@ -1,6 +1,9 @@
 pipeline {
     agent any
-
+    
+     options {
+        skipDefaultCheckout()
+    }
     environment{
         DOCKER_CREDS= 'DOCKER_CREDS'
     }
