--- a/robo_shop.jenkins/jenkinsfile
+++ b/robo_shop.jenkins/jenkinsfile
@@ -28,11 +28,11 @@ pipeline {
                     def knownServices = ['user','cart','catalogue','shipping','payment','web']
 
                     echo "Comparing Files to detect Changes."
-                    
+
                     affected = changedServices.findAll { knownServices.contains(it) }
 
                     if (affected.isEmpty()){
-                        echo "No Changes in Service Files.Skipping Builds."
+                        echo "No Changes in Service Files.Skipping Next Stages."
                         currentBuild.result = 'SUCCESS'
                         return
                     }
