--- a/robo_shop.jenkins/jenkinsfile
+++ b/robo_shop.jenkins/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
             steps{
                 script{
                     def changedServices = sh(
-                        script :"git diff --name-only origin/main...HEAD | grep '^roboshop\\.jenkins/' | cut -d/ -f2 | sort -u",
+                        script :"git diff --name-only HEAD~1 HEAD | grep '^roboshop\\.jenkins/' | cut -d/ -f2 | sort -u",
                         returnStdout:  true).trim().split("\n")
                     echo "${changedServices}"
                     def knownServices = ['user','cart','catalogue','shipping','payment','web']
