--- a/robo_shop.jenkins/jenkinsfile
+++ b/robo_shop.jenkins/jenkinsfile
@@ -21,13 +21,8 @@ pipeline {
         stage('Detecting Repository Changes'){
             steps{
                 script{
-                    sh '''
-                        echo "HEAD: $(git rev-parse HEAD)"
-                        echo "HEAD~1: $(git rev-parse HEAD~1)"
-                        git log --oneline -2
-                        '''
                     def changedServices = sh(
-                        script :"git diff --name-only HEAD~1 HEAD | grep '^roboshop\\.jenkins/' | cut -d/ -f2 | sort -u",
+                        script :"git diff --name-only HEAD~1 HEAD | grep '^robo_shop\\.jenkins/' | cut -d/ -f2 | sort -u",
                         returnStdout:  true).trim().split("\n")
                     echo "${changedServices}"
                     def knownServices = ['user','cart','catalogue','shipping','payment','web']
