--- a/robo_shop.jenkins/jenkins/dockerfile
+++ b/robo_shop.jenkins/jenkins/dockerfile
@@ -1,5 +1,7 @@
 FROM jenkins/jenkins:alpine
 
+COPY --from=docker /usr/local/bin/docker /usr/local/bin/
+
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 
 ENV CASC_JENKINS_CONFIG=/usr/share/jenkins/ref/jenkins.yaml
