Updated Jenkins as Code File to enable WebHook

--- a/robo_shop.jenkins/jenkins/jenkins.yaml
+++ b/robo_shop.jenkins/jenkins/jenkins.yaml
@@ -25,4 +25,7 @@ jobs:
             scriptPath('robo_shop.jenkins/jenkinsfile')
           }
         }
+        triggers {
+          githubPush()
+        }
       }
