Updated to point at relevant landing page

--- a/robo_shop.jenkins/web/dockerfile
+++ b/robo_shop.jenkins/web/dockerfile
@@ -13,7 +13,7 @@ RUN rm -rf /usr/share/nginx/html/* && \
     wget https://buildbucket5.s3.us-east-1.amazonaws.com/RoboShop/web.zip && \
     unzip -o web.zip && \
     rm -f web.zip && \
-    sed -i "s/splash.html/docker.html/g" /usr/share/nginx/html/js/controller.js
+    sed -i "s/splash.html/jenkins.html/g" /usr/share/nginx/html/js/controller.js
 
 # Adds custom Nginx configuration
 RUN mkdir -p /etc/nginx/default.d/
