Loops over 'services' variable  to install all Roboshop Services

--- a/robo_shop.ansible/setup.yaml
+++ b/robo_shop.ansible/setup.yaml
@@ -1,7 +1,8 @@
-- name: "Setting Up {{service}} Service"
+- name: "Setting Up {{item}} Service"
   become: yes
-  hosts: "{{service}}"
+  hosts: "{{item}}"
   vars_files:
     - variables.yaml
   roles:
-    - "{{service}}"
+    - "{{item}}"
+  loop: "{{ services }}"
