--- a/robo_shop.jenkins/docker-compose.yaml
+++ b/robo_shop.jenkins/docker-compose.yaml
@@ -7,6 +7,7 @@ volumes:
   redis:
   mysql:
   rabbitmq:
+  grafana:
 
 services:
   mongodb:
@@ -90,10 +91,33 @@ services:
       - shipping
       - payment
 
-  sonarqube:
-    image:  sonarqube:community
-    container_name: sonarqube
-    ports: 
-      - "8081:9000"
-    environment:
-      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "8082:9090"
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "8081:3000"
+    depends_on:
+      - prometheus
+    volumes:
+      - source: grafana
+        target: /var/lib/grafana
+        type: volume
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - "8083:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
