Updated Docker Compose file to include Monitoring stack

--- a/robo_shop.jenkins/docker-compose.yaml
+++ b/robo_shop.jenkins/docker-compose.yaml
@@ -92,13 +92,6 @@ services:
       - payment
 
 
-  prometheus:
-    image: prom/prometheus
-    container_name: prometheus
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "8082:9090"
 
   grafana:
     image: grafana/grafana
@@ -116,8 +109,29 @@ services:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
     ports:
-      - "8083:8080"
+      - "8082:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
+
+  node-exporter:
+    image: prom/node-exporter
+    container_name: node-exporter
+    ports:
+      - 8083":9100"
+    volumes:
+      - "/:/host:ro,rslave"
+    command:
+      - '--path.rootfs=/host'
+  
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "8084:9090"
+    depends_on:
+      - node-exporter
+      - cadvisor
