--- a/robo_shop.jenkins/docker-compose.yaml
+++ b/robo_shop.jenkins/docker-compose.yaml
@@ -91,7 +91,16 @@ services:
       - shipping
       - payment
 
-
+  jenkins:
+    image:  kbalaji2212/roboshop:jenkins-v1
+    container_name: jenkins
+    ports:
+      - "8080:8080"
+    volumes:
+      - /home/balaji/jenkins_data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    group_add:
+      - "990"
 
   grafana:
     image: grafana/grafana
